--- a/app/views/pages/mission.html.erb
+++ b/app/views/pages/mission.html.erb
@@ -1,4 +1,64 @@
-<div class="container">
-  <div class="half-buffer"></div>
-  <h1>Mission</h1>
-</div>
+<main class="mt-3">
+  <div class="container">
+
+    <!-- Section: Magazine v.2 -->
+    <section class="magazine-section">
+
+      <h1 class="h1-responsive font-weight-bold text-center mt-5">Our Mission</h1>
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-4">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+
+      <div class="view">
+        <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid" alt="placeholder">
+        <div class="mask flex-center waves-effect waves-light rgba-teal-strong">
+          <h4 class="text-center white-text w-responsive mx-auto">Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit id laborum.</h4>
+        </div>
+      </div>
+
+    </section>
+
+
+     <section class="text-center">
+       <div class="row wow fadeIn">
+
+         <div class="col-md-6 my-4">
+           <section class="card wow fadeIn" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
+             <div class="card-body text-white text-center py-5 px-5 my-5">
+               <h2 class="mb-4">
+                 <strong>Testimonials</strong>
+               </h2>
+               <p>
+                 <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer facilisis sem nunc, eu varius erat feugiat quis.</strong>
+               </p>
+               <%= link_to page_path(:testimonials), target: "_blank", class: "btn btn-outline-white btn-lg" do %>Testimonials<% end %>
+           </section>
+         </div> <!-- col -->
+
+         <div class="col-md-6 my-4">
+           <section class="card wow fadeIn" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
+             <div class="card-body text-white text-center py-5 px-5 my-5">
+               <h2 class="mb-4">
+                 <strong>FAQ</strong>
+               </h2>
+               <p>
+                 <strong>In hac habitasse platea dictumst. Maecenas eget convallis ipsum. Vivamus ut purus facilisis tellus condimentum interdum.</strong>
+               </p>
+               <%= link_to page_path(:faq), target: "_blank", class: "btn btn-outline-white btn-lg" do %>See FAQ<% end %>
+           </section>
+         </div> <!-- col -->
+
+      </div> <!-- row -->
+    </section>
+
+   </div> <!-- container -->
+ </main>
+
+
+
+
+<script type="text/javascript">
+  $(document).ready(function() {
+     $('.card-body').matchHeight();
+   });
+</script>
