Frontend Tempted Out

--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,4 +1,61 @@
-<div class="container">
-  <div class="half-buffer"></div>
-  <h1>Apply</h1>
-</div>
+<main class="mt-5">
+  <div class="container">
+
+    <h1 class="text-center">Apply</h1>
+
+    <section>
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+    </section> <!-- mission description -->
+
+
+    <section class="text-center my-5">
+      <div class="row">
+
+        <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+
+          <div class="view overlay rounded z-depth-2 mb-4">
+            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/81.jpg" alt="Sample image">
+            <a><div class="mask rgba-white-slight"></div></a>
+          </div>
+
+          <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Scholarship</strong></h4>
+          <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
+            quo minus id quod maxime placeat facere possimus voluptas.</p>
+          <a class="btn btn-primary btn-md">Read more</a>
+
+        </div> <!-- Grid column -->
+
+        <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+
+          <div class="view overlay rounded z-depth-2 mb-4">
+            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Sample image">
+            <a><div class="mask rgba-white-slight"></div></a>
+          </div>
+
+          <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Hardship</strong></h4>
+          <p class="dark-grey-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            voluptatum deleniti atque corrupti quos dolores.</p>
+          <a class="btn btn-primary btn-md">Read more</a>
+
+        </div> <!-- Grid column -->
+
+        <div class="col-lg-4 col-md-6 mb-0">
+
+          <div class="view overlay rounded z-depth-2 mb-4">
+            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/13.jpg" alt="Sample image">
+            <a><div class="mask rgba-white-slight"></div></a>
+          </div>
+
+          <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Charity</strong></h4>
+          <p class="dark-grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+            quia consequuntur magni dolores eos qui ratione.</p>
+          <a class="btn btn-primary btn-md">Read more</a>
+
+        </div> <!-- Grid column -->
+
+      </div> <!-- Grid row -->
+
+    </section> <!-- Section: Blog v.2 -->
+
+  </div> <!-- container -->
+</main>
