--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,4 +1,70 @@
-<div class="container">
-  <div class="half-buffer"></div>
-  <h1>FAQ</h1>
-</div>
+<main class="mt-5">
+  <div class="container">
+
+    <h1 class="text-center">FAQ</h1>
+
+    <section class="team-section magazine-section text-center">
+      <p class="dark-grey-text w-responsive mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
+        eum porro a pariatur veniam.</p>
+    </section>
+
+    <section class="my-5"> <!-- Features Section 1 -->
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-lg-5 text-center text-lg-left">
+          <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/screens-section.jpg" alt="Sample image">
+        </div> <!-- Image Grid column -->
+
+        <div class="col-lg-7">
+
+          <div class="row mb-3"> <!-- individual question -->
+            <div class="col-1">
+              <i class="fas fa-question fa-lg color-toca-red"></i>
+            </div> <!-- Grid column -->
+
+            <div class="col-xl-10 col-md-11 col-10">
+              <h5 class="font-weight-bold mb-3">Question 1</h5>
+              <p class="grey-text">
+                Quisque vulputate pretium risus, vitae dapibus nisi viverra et. Morbi ultricies consectetur varius. Mauris feugiat urna turpis, ut hendrerit metus consequat ullamcorper. Donec ac odio dolor. Pellentesque id eleifend justo.
+              </p>
+            </div> <!-- Grid column -->
+          </div> <!-- Grid row -->
+
+          <div class="row mb-3"> <!-- individual question -->
+            <div class="col-1">
+              <i class="fas fa-question fa-lg color-toca-red"></i>
+            </div> <!-- Grid column -->
+
+            <div class="col-xl-10 col-md-11 col-10">
+              <h5 class="font-weight-bold mb-3">Question 2</h5>
+              <p class="grey-text">
+                Sed varius dolor ligula, ut euismod tellus commodo eu. Ut luctus nulla sapien, sit amet venenatis risus laoreet eget. Fusce faucibus rhoncus sapien sit amet eleifend. Phasellus maximus tellus augue, vel vestibulum libero commodo in. Fusce vel nulla eleifend, tristique urna sed, aliquet lectus. Etiam non tempor enim.
+              </p>
+            </div> <!-- Grid column -->
+          </div> <!-- Grid row -->
+
+          <div class="row mb-3"> <!-- individual question -->
+            <div class="col-1">
+              <i class="fas fa-question fa-lg color-toca-red"></i>
+            </div> <!-- Grid column -->
+
+            <div class="col-xl-10 col-md-11 col-10">
+              <h5 class="font-weight-bold mb-3">Question 3</h5>
+              <p class="grey-text mb-0">
+                Sed tristique vitae libero a posuere. Donec auctor pulvinar pretium. In molestie nec sem eu fermentum. Vestibulum magna enim, feugiat nec justo vitae, tempus pellentesque ante. Aliquam sollicitudin, est at blandit posuere, risus tellus ornare diam, nec finibus elit tortor eu tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+              </p>
+            </div> <!-- Grid column -->
+          </div> <!--Grid row-->
+
+        </div> <!-- Questions Grid column -->
+
+      </div> <!-- Grid row -->
+
+    </section> <!-- Features Section 1 -->
+
+  </div> <!-- container -->
+</main>
