--- a/app/views/pages/testimonials.html.erb
+++ b/app/views/pages/testimonials.html.erb
@@ -1,4 +1,162 @@
-<div class="container">
-  <div class="half-buffer"></div>
-  <h1>Testimonials</h1>
-</div>
+<main class="mt-5">
+  <div class="container">
+
+    <h1 class="text-center">Testimonials</h1>
+
+    <section class="team-section magazine-section text-center">
+      <p class="dark-grey-text w-responsive mx-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
+        eum porro a pariatur veniam.</p>
+
+    <div class="text-center">
+      <%= link_to "Submit a Testimonial", page_path(:apply), class: "btn btn-secondary" %>
+    </div> <!-- center for button -->
+
+      <div class="row text-center">
+
+        <div class="col-md-4 mb-md-0 mb-5">
+          <div class="testimonial">
+            <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Scholarship</h3>
+            <div class="avatar mx-auto">
+              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="z-depth-1 img-fluid">
+            </div>
+            <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 1</h6>
+            <p class="font-weight-normal dark-grey-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
+              eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+            </p>
+          </div> <!-- testimonial -->
+
+          <div class="single-news text-left mb-3">
+            <div class="d-flex justify-content-between">
+              <div class="col-11 text-truncate pl-0 mb-3">
+                <a>Another testimonial.</a>
+              </div>
+              <a><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div> <!-- Small news -->
+
+          <div class="single-news text-left mb-3">
+            <div class="d-flex justify-content-between">
+              <div class="col-11 text-truncate pl-0 mb-3">
+                <a>More testimonials</a>
+              </div>
+              <a><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div> <!-- Small news -->
+
+          <div class="single-news text-left mb-3">
+            <div class="d-flex justify-content-between">
+              <div class="col-11 text-truncate pl-0 mb-3">
+                <a>And so on</a>
+              </div>
+              <a><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div> <!-- Small news -->
+
+          <div class="text-center mb-5">
+            <%= link_to "Apply Now", page_path(:apply), class: "btn btn-primary" %>
+          </div> <!-- center for button -->
+
+        </div> <!--Grid column-->
+
+        <div class="col-md-4 mb-md-0 mb-5">
+          <div class="testimonial">
+            <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Hardship</h3>
+            <div class="avatar mx-auto">
+              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="z-depth-1 img-fluid">
+            </div>
+            <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 2</h6>
+            <p class="font-weight-normal dark-grey-text">
+              Ut enim ad minima veniam, quis nostrum exercitationem ullam
+              corporis suscipit laboriosam, nisi ut aliquid commodi.
+            </p>
+            </div> <!-- testimonial -->
+
+            <div class="single-news text-left mb-3">
+              <div class="d-flex justify-content-between">
+                <div class="col-11 text-truncate pl-0 mb-3">
+                  <a>Another testimonial.</a>
+                </div>
+                <a><i class="fas fa-angle-double-right"></i></a>
+              </div>
+            </div> <!-- Small news -->
+
+            <div class="single-news text-left mb-3">
+              <div class="d-flex justify-content-between">
+                <div class="col-11 text-truncate pl-0 mb-3">
+                  <a>More testimonials</a>
+                </div>
+                <a><i class="fas fa-angle-double-right"></i></a>
+              </div>
+            </div> <!-- Small news -->
+
+            <div class="single-news text-left mb-3">
+              <div class="d-flex justify-content-between">
+                <div class="col-11 text-truncate pl-0 mb-3">
+                  <a>And so on</a>
+                </div>
+                <a><i class="fas fa-angle-double-right"></i></a>
+              </div>
+            </div> <!-- Small news -->
+
+            <div class="text-center mb-5">
+              <%= link_to "Apply Now", page_path(:apply), class: "btn btn-primary" %>
+            </div> <!-- center for button -->
+
+        </div> <!--Grid column-->
+
+        <div class="col-md-4">
+
+          <div class="testimonial">
+            <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Charity</h3>
+            <div class="avatar mx-auto">
+              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="z-depth-1 img-fluid">
+            </div>
+            <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 3</h6>
+            <p class="font-weight-normal dark-grey-text">
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui
+              blanditiis praesentium voluptatum deleniti atque corrupti.
+            </p>
+          </div> <!-- testimonial -->
+
+          <div class="single-news text-left mb-3">
+            <div class="d-flex justify-content-between">
+              <div class="col-11 text-truncate pl-0 mb-3">
+                <a>Another testimonial.</a>
+              </div>
+              <a><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div> <!-- Small news -->
+
+          <div class="single-news text-left mb-3">
+            <div class="d-flex justify-content-between">
+              <div class="col-11 text-truncate pl-0 mb-3">
+                <a>More testimonials</a>
+              </div>
+              <a><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div> <!-- Small news -->
+
+          <div class="single-news text-left mb-3">
+            <div class="d-flex justify-content-between">
+              <div class="col-11 text-truncate pl-0 mb-3">
+                <a>And so on</a>
+              </div>
+              <a><i class="fas fa-angle-double-right"></i></a>
+            </div>
+          </div> <!-- Small news -->
+
+          <div class="text-center mb-5">
+            <%= link_to "Apply Now", page_path(:apply), class: "btn btn-primary" %>
+          </div> <!-- center for button -->
+
+        </div> <!--Grid column-->
+
+      </div> <!--Grid row-->
+
+    </section> <!-- Section: Testimonials v.3 -->
+
+
+   </div> <!-- container -->
+ </main>
