--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
 
  @import 'bootstrap';
  @import 'mdb/mdb';
+ @import 'font-awesome';
+ @import 'font_awesome5_webfont';
+ @import 'font_awesome5.css';
+
 
 
  /*-----------------------------
@@ -27,6 +31,14 @@
 
 h1 {
   text-transform: uppercase;
+  color: black;
+  letter-spacing: 0.1em;
+  font-size: 3em;
+}
+
+.toca-uppercase {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 
 
@@ -77,9 +89,10 @@ $color-light-grey: #D1D3D4 !important;
 
 .non-footer { min-height: calc(100vh - 122px) }
 
-.btn-primary  {
-  background-color: $color-toca-red;
-}
+.btn-primary  { background-color: $color-toca-red; }
+.btn-secondary  { background-color: $color-toca-green; }
+
+* { border-radius: 0px !important; }
 
 
 
@@ -90,11 +103,16 @@ $color-light-grey: #D1D3D4 !important;
 -------------------------------
 -----------------------------*/
 
+.header {
+  z-index: 100 !important;
+}
+
 .nav-item {
   color: black;
   padding-left: 15px;
   text-transform: uppercase;
   font-weight: 700;
+  letter-spacing: 0.1em;
 }
 
 .navbar .nav-item:hover .nav-link {
