--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,31 @@
-<main class="mt-3 pt-5">
+<main>
+
+  <section class="view mt-1">
+    <div class="row">
+
+      <div class="col-md-6 px-5">
+        <div class="d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="heading display-3">TOCA Cares</h1>
+          <h4 class="subheading font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer facilisis sem nunc, eu varius erat feugiat quis.</h4>
+          <%= link_to page_path(:apply), class: "btn btn-primary btn-lg" do %>Apply Now<% end %>
+        </div> <!-- flex -->
+      </div> <!-- text col -->
+
+      <div class="col-md-6">
+        <div class="view">
+          <img src="https://images.pexels.com/photos/325045/pexels-photo-325045.jpeg" class="img-fluid" alt="smaple image">
+          <div class="mask flex-center hm-gradient"></div>
+        </div> <!-- view -->
+      </div> <!-- img col -->
+
+    </div> <!-- row -->
+  </section> <!-- Intro section -->
+
   <div class="container">
-    <section class="card wow fadeIn" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
-      <div class="card-body text-white text-center py-5 px-5 my-5">
-        <h1 class="mb-4">
-          <strong>TOCA Cares</strong>
-        </h1>
-        <p>
-          <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer facilisis sem nunc, eu varius erat feugiat quis.</strong>
-        </p>
-        <%= link_to page_path(:apply), target: "_blank", class: "btn btn-outline-white btn-lg" do %>Apply Now<% end %>
-    </section>
-
-    <div class="half-buffer"></div>
-
      <section class="text-center">
        <div class="row mb-4 wow fadeIn">
 
-           <div class="col-md-4 mb-4">
+           <div class="col-lg-4 mb-4">
                <div class="card">
                    <div class="view overlay"> <!-- image -->
                        <img src="https://mdbootstrap.com/wp-content/uploads/2017/11/brandflow-tutorial-fb.jpg" class="card-img-top" alt="">
@@ -26,7 +35,7 @@
                    </div>
                    <div class="card-body h-100">
                        <!--Title-->
-                       <h4 class="card-title">Scholarship</h4>
+                       <h4 class="card-title toca-uppercase">Scholarship</h4>
                        <!--Text-->
                        <p class="card-text">Donec blandit quam ac ante imperdiet posuere. Ut et nisi dictum nibh ornare iaculis in at elit. Phasellus vitae vulputate enim.</p>
                        <%= link_to page_path(:apply), class: "btn btn-primary btn-md" do %>
@@ -37,7 +46,7 @@
            </div> <!--Grid column-->
            <!--Grid column-->
 
-           <div class="col-md-4 mb-4">
+           <div class="col-lg-4 mb-4">
                <div class="card">
                    <div class="view overlay"> <!-- image -->
                        <img src="https://mdbootstrap.com/wp-content/uploads/2017/11/brandflow-tutorial-fb.jpg" class="card-img-top" alt="">
@@ -46,7 +55,7 @@
                    </div>
                    <div class="card-body h-100">
                        <!--Title-->
-                       <h4 class="card-title">Hardship</h4>
+                       <h4 class="card-title toca-uppercase">Hardship</h4>
                        <!--Text-->
                        <p class="card-text">Vivamus condimentum ultrices magna, a lobortis justo tincidunt sed. Donec vitae mattis lectus.</p>
                        <%= link_to page_path(:apply), class: "btn btn-primary btn-md" do %>
@@ -57,7 +66,7 @@
            </div> <!--Grid column-->
 
            <!--Grid column-->
-           <div class="col-md-4 mb-4">
+           <div class="col-lg-4 mb-4">
                <div class="card">
                    <div class="view overlay"> <!-- image -->
                        <img src="https://mdbootstrap.com/wp-content/uploads/2017/11/brandflow-tutorial-fb.jpg" class="card-img-top" alt="">
@@ -67,7 +76,7 @@
                    </div>
                    <div class="card-body">
                        <!--Title-->
-                       <h4 class="card-title">Charity</h4>
+                       <h4 class="card-title toca-uppercase">Charity</h4>
                        <!--Text-->
                        <p class="card-text">Quisque gravida leo lorem, sit amet dignissim risus laoreet quis. Quisque ultricies magna quis volutpat porttitor. </p>
                        <%= link_to page_path(:apply), class: "btn btn-primary btn-md" do %>
@@ -88,6 +97,6 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-     $('.card-body').matchHeight();
+     $('.card-text').matchHeight();
    });
 </script>
