--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -1,4 +1,27 @@
-<div class="container">
-  <div class="half-buffer"></div>
-  <h1>Contribute</h1>
-</div>
+<main class="mt-5">
+  <div class="container">
+
+    <h1 class="text-center">Contribute</h1>
+
+    <section>
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+    </section> <!-- mission description -->
+
+    <section class="magazine-section">
+      <div class="view">
+        <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid" alt="placeholder">
+        <div class="mask flex-center waves-effect waves-light rgba-black-strong">
+          <h4 class="text-center white-text w-responsive mx-auto">Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit id laborum.</h4>
+        </div>
+      </div>
+    </section> <!-- mission description -->
+
+
+    <div class="text-center mt-4 mb-3">
+      <%= link_to page_path(:apply), class: "btn btn-primary btn-lg" do %>Contribute Now<% end %>
+    </div> <!-- center for button -->
+
+  </div> <!-- container -->
+</main>
