--- a/app/views/pages/mission.html.erb
+++ b/app/views/pages/mission.html.erb
@@ -1,23 +1,20 @@
-<main class="mt-3">
+<main class="mt-5">
   <div class="container">
 
-    <!-- Section: Magazine v.2 -->
-    <section class="magazine-section">
+    <h1 class="text-center">Our Mission</h1>
 
-      <h1 class="h1-responsive font-weight-bold text-center mt-5">Our Mission</h1>
-      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-4">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
+    <section class="magazine-section">
+      <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
 
       <div class="view">
         <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid" alt="placeholder">
-        <div class="mask flex-center waves-effect waves-light rgba-teal-strong">
+        <div class="mask flex-center waves-effect waves-light rgba-black-strong">
           <h4 class="text-center white-text w-responsive mx-auto">Duis aute irure dolor in reprehenderit in
             voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit id laborum.</h4>
         </div>
       </div>
-
-    </section>
-
+    </section> <!-- mission description -->
 
      <section class="text-center">
        <div class="row wow fadeIn">
@@ -49,16 +46,14 @@
          </div> <!-- col -->
 
       </div> <!-- row -->
-    </section>
+    </section> <!-- two callouts -->
 
    </div> <!-- container -->
  </main>
 
 
-
-
-<script type="text/javascript">
-  $(document).ready(function() {
-     $('.card-body').matchHeight();
-   });
-</script>
+ <script type="text/javascript">
+   $(document).ready(function() {
+      $('.card-body').matchHeight();
+    });
+ </script>
