--- a/app/views/pages/testimonials.html.erb
+++ b/app/views/pages/testimonials.html.erb
@@ -8,10 +8,11 @@
         Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
         eum porro a pariatur veniam.</p>
 
-    <div class="text-center">
+    <div class="text-center mb-5">
       <%= link_to "Submit a Testimonial", page_path(:apply), class: "btn btn-secondary" %>
     </div> <!-- center for button -->
 
+    <hr>
       <div class="row text-center">
 
         <div class="col-md-4 mb-md-0 mb-5">
