Testimonial Inserted and Styling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <section class="view mt-1">
     <div class="row">
 
-      <div class="col-md-6 px-5">
+      <div class="col-md-6 px-5 my-5">
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
           <h1 class="heading display-3">TOCA Cares</h1>
           <h4 class="subheading font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer facilisis sem nunc, eu varius erat feugiat quis.</h4>
