--- a/app/views/pages/testimonials.html.erb
+++ b/app/views/pages/testimonials.html.erb
@@ -13,19 +13,27 @@
     </div> <!-- center for button -->
 
     <hr>
-      <div class="row text-center">
 
-        <div class="col-md-4 mb-md-0 mb-5">
-          <div class="testimonial">
+    <div class="row text-center">
+
+      <div class="col-lg-4 mb-md-0 mb-5">
+        <div class="testimonial">
             <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Scholarship</h3>
-            <div class="avatar mx-auto">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="z-depth-1 img-fluid">
-            </div>
-            <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 1</h6>
-            <p class="font-weight-normal dark-grey-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
-              eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
-            </p>
+            <div class="row">
+              <div class="col-sm-4 col-lg-12">
+                <div class="avatar mx-auto mb-3">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="z-depth-1 img-fluid" style="max-width: 100%">
+                </div>
+              </div> <!-- col -->
+              <div class="col-sm-8 col-lg-12 text-left">
+                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 1</h6>
+                <p class="font-weight-normal dark-grey-text">
+                  <i class="fas fa-quote-left pr-2 color-toca-green"></i>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                  <i class="fas fa-quote-right pl-2 color-toca-green"></i>
+                </p>
+              </div> <!-- col -->
+            </div> <!-- row -->
           </div> <!-- testimonial -->
 
           <div class="single-news text-left mb-3">
@@ -61,18 +69,26 @@
 
         </div> <!--Grid column-->
 
-        <div class="col-md-4 mb-md-0 mb-5">
+        <div class="col-lg-4 mb-md-0 mb-5">
+
           <div class="testimonial">
             <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Hardship</h3>
-            <div class="avatar mx-auto">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="z-depth-1 img-fluid">
-            </div>
-            <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 2</h6>
-            <p class="font-weight-normal dark-grey-text">
-              Ut enim ad minima veniam, quis nostrum exercitationem ullam
-              corporis suscipit laboriosam, nisi ut aliquid commodi.
-            </p>
-            </div> <!-- testimonial -->
+            <div class="row">
+              <div class="col-sm-4 col-lg-12">
+                <div class="avatar mx-auto mb-3">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="z-depth-1 img-fluid" style="max-width: 100%">
+                </div> <!-- avatar -->
+              </div> <!-- column -->
+              <div class="col-sm-8 col-lg-12 text-left">
+                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Legal Assistance</h6>
+                <p class="font-weight-normal dark-grey-text">
+                  <i class="fas fa-quote-left pr-2 color-toca-green"></i>
+                  When TOCA offered assistance to me during a very rough period in my life, I not only had the peace of mind that I was going to be ok and would get past this, but it also gave me the comfort of knowing that TOCA had my back; they were there to pick me up and help me move forward. I am blessed to work for a company that feels like a second family to me.
+                  <i class="fas fa-quote-right pl-2 color-toca-green"></i>
+                </p>
+              </div> <!-- column -->
+            </div> <!-- row -->
+          </div> <!-- testimonial -->
 
             <div class="single-news text-left mb-3">
               <div class="d-flex justify-content-between">
@@ -107,18 +123,25 @@
 
         </div> <!--Grid column-->
 
-        <div class="col-md-4">
+        <div class="col-lg-4 mb-md-0 mb-5">
 
           <div class="testimonial">
             <h3 class="font-weight-bold color-toca-red toca-uppercase my-4">Charity</h3>
-            <div class="avatar mx-auto">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="z-depth-1 img-fluid">
-            </div>
-            <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 3</h6>
-            <p class="font-weight-normal dark-grey-text">
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui
-              blanditiis praesentium voluptatum deleniti atque corrupti.
-            </p>
+            <div class="row">
+              <div class="col-sm-4 col-lg-12">
+                <div class="avatar mx-auto mb-3">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="z-depth-1 img-fluid" style="max-width: 100%">
+                </div> <!-- avatar -->
+              </div> <!-- column -->
+              <div class="col-sm-8 col-lg-12 text-left">
+                <h6 class="font-weight-bold color-black toca-uppercase mt-3">Example 3</h6>
+                <p class="font-weight-normal dark-grey-text">
+                  <i class="fas fa-quote-left pr-2 color-toca-green"></i>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
+                  <i class="fas fa-quote-right pl-2 color-toca-green"></i>
+                </p>
+              </div> <!-- column -->
+            </div> <!-- row -->
           </div> <!-- testimonial -->
 
           <div class="single-news text-left mb-3">
