--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,6 +16,9 @@
         <li class="nav-item"><%= link_to page_path(:contribute), class: "nav-link" do %>Contribute<% end %></li>
         <li class="nav-item"><%= link_to page_path(:testimonials), class: "nav-link" do %>Testimonials<% end %></li>
         <li class="nav-item"><%= link_to page_path(:faq), class: "nav-link" do %>FAQ<% end %></li>
+        <% if current_user %>
+          <li class="nav-item"><%= link_to user_path(current_user), class: "nav-link" do %>My Account<% end %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
