--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
   <body>
     <div class="non-footer">
       <%= render 'layouts/navbar' %>
+      <%= render 'layouts/notifications' %>
 
       <%= yield %>
     </div>
